@@ -4,7 +4,8 @@ Changelog
 1.4.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Add ftw.publisher support for teaser portlet.
+  [jone]
 
 
 1.4.1 (2015-02-25)
